--- a/repair.html
+++ b/repair.html
@@ -8,233 +8,201 @@
   <style>
     body {
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, "Helvetica Neue", Arial;
-      background: linear-gradient(180deg, #eef3fb, #f8fafc);
-      color: #1f2937;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: linear-gradient(180deg, #eef3fb, #ffffff);
+      color: #333;
     }
 
-    .container {
-      max-width: 860px;
+    .page {
+      max-width: 900px;
       margin: 40px auto;
-      background: #fff;
-      border-radius: 14px;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
-      padding: 36px 42px;
+      padding: 0 16px;
     }
 
-    h1 {
+    .header {
+      margin-bottom: 20px;
+    }
+
+    .header h1 {
       margin: 0;
       font-size: 26px;
-      font-weight: 700;
     }
 
-    .subtitle {
-      margin-top: 6px;
-      color: #6b7280;
-      font-size: 14px;
+    .header p {
+      margin: 6px 0 0;
+      color: #666;
     }
 
-    .alert {
-      margin: 22px 0;
-      padding: 14px 18px;
-      border-radius: 10px;
-      background: #fff1f1;
-      border: 1px solid #fecaca;
-      color: #b91c1c;
-      font-size: 14px;
-      display: none;
+    .card {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      padding: 24px;
     }
 
-    .form-grid {
-      margin-top: 28px;
+    .row {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: 22px;
+      gap: 16px;
     }
 
     .form-group {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .form-group.full {
-      grid-column: 1 / -1;
+      margin-bottom: 16px;
     }
 
     label {
-      font-size: 14px;
+      display: block;
+      font-weight: 600;
       margin-bottom: 6px;
     }
 
-    .required {
-      color: #ef4444;
-      margin-left: 4px;
+    label span {
+      color: #d93025;
     }
 
-    input,
-    select,
-    textarea {
-      border-radius: 10px;
-      border: 1px solid #d1d5db;
-      padding: 12px 14px;
+    input, select, textarea {
+      width: 100%;
+      box-sizing: border-box;
+      padding: 10px 12px;
+      border-radius: 8px;
+      border: 1px solid #dcdcdc;
       font-size: 14px;
-      outline: none;
-      transition: all 0.2s ease;
-    }
-
-    input:focus,
-    select:focus,
-    textarea:focus {
-      border-color: #2563eb;
-      box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.15);
     }
 
     textarea {
       resize: vertical;
-      min-height: 110px;
+      min-height: 90px;
     }
 
-    .hint {
-      font-size: 12px;
-      color: #6b7280;
-      margin-top: 4px;
+    input:focus, select:focus, textarea:focus {
+      outline: none;
+      border-color: #4c7ef3;
     }
 
     .actions {
-      margin-top: 34px;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      gap: 12px;
+      margin-top: 20px;
     }
 
     .btn {
-      border: none;
-      border-radius: 12px;
-      padding: 12px 26px;
+      padding: 12px 22px;
+      border-radius: 10px;
       font-size: 15px;
       cursor: pointer;
-      transition: all 0.2s ease;
+      border: none;
     }
 
     .btn-primary {
-      background: linear-gradient(135deg, #2563eb, #1d4ed8);
+      background: linear-gradient(135deg, #4c7ef3, #315be7);
       color: #fff;
-      box-shadow: 0 8px 18px rgba(37, 99, 235, 0.35);
     }
 
-    .btn-primary:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 12px 24px rgba(37, 99, 235, 0.45);
+    .btn-primary:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
     }
 
     .btn-secondary {
       background: #f3f4f6;
-      color: #374151;
+      color: #333;
     }
 
-    footer {
+    .footer {
       text-align: center;
-      margin-top: 26px;
-      font-size: 12px;
-      color: #9ca3af;
+      margin-top: 16px;
+      font-size: 13px;
+      color: #999;
     }
 
-    @media (max-width: 720px) {
-      .form-grid {
-        grid-template-columns: 1fr;
-      }
+    .loading {
+      margin-left: 8px;
+      font-size: 13px;
     }
   </style>
 </head>
 
 <body>
-  <div class="container">
-    <h1>IT 运维支持系统</h1>
-    <div class="subtitle">内部报修入口 · 提交后自动生成工单</div>
-
-    <div class="alert" id="apiAlert">
-      ⚠️ 请先在 <strong>repair.js</strong> 中配置 API_URL（Apps Script 的 Web App URL）
+  <div class="page">
+    <div class="header">
+      <h1>IT 运维支持系统</h1>
+      <p>内部报修入口 · 提交后自动生成工单</p>
     </div>
 
-    <div class="form-grid">
-      <!-- 报修部门 -->
-      <div class="form-group">
-        <label>报修部门<span class="required">*</span></label>
-        <select id="departmentSelect" onchange="toggleDeptInput()">
-          <option value="">请选择部门</option>
-          <option>IT部</option>
-          <option>行政</option>
-          <option>总务</option>
-          <option>后勤</option>
-          <option>基建</option>
-          <option>教务处</option>
-          <option>财务部</option>
-          <option>商务部</option>
-          <option>销售部</option>
-          <option>人事部</option>
-          <option value="其他">其他（手动填写）</option>
-        </select>
+    <div class="card">
+      <!-- 关键：必须是 form -->
+      <form id="repairForm" onsubmit="submitTicket(event)">
 
-        <input
-          id="departmentInput"
-          type="text"
-          placeholder="请输入部门名称"
-          style="display: none; margin-top: 8px;"
-        />
-      </div>
+        <div class="row">
+          <div class="form-group">
+            <label>报修部门 <span>*</span></label>
+            <select id="department" required>
+              <option value="">请选择部门</option>
+              <option>行政</option>
+              <option>总务</option>
+              <option>后勤</option>
+              <option>基建</option>
+              <option>教务处</option>
+              <option>销售部</option>
+              <option>IT 部</option>
+              <option>其他</option>
+            </select>
+          </div>
 
-      <!-- 问题类型 -->
-      <div class="form-group">
-        <label>问题类型<span class="required">*</span></label>
-        <select id="category">
-          <option value="">请选择</option>
-          <option>系统</option>
-          <option>网络</option>
-          <option>硬件</option>
-          <option>账号权限</option>
-          <option>其他</option>
-        </select>
-      </div>
+          <div class="form-group">
+            <label>问题类型 <span>*</span></label>
+            <select id="category" required>
+              <option value="">请选择</option>
+              <option>系统</option>
+              <option>网络</option>
+              <option>硬件</option>
+              <option>账号权限</option>
+              <option>其他</option>
+            </select>
+          </div>
+        </div>
 
-      <!-- 问题标题 -->
-      <div class="form-group full">
-        <label>问题标题<span class="required">*</span></label>
-        <input id="title" type="text" placeholder="简要描述问题" />
-      </div>
+        <div class="form-group">
+          <label>问题标题 <span>*</span></label>
+          <input id="title" type="text" placeholder="简要描述问题" required />
+        </div>
 
-      <!-- 问题描述 -->
-      <div class="form-group full">
-        <label>问题描述</label>
-        <textarea id="description" placeholder="请详细描述问题现象"></textarea>
-      </div>
+        <div class="form-group">
+          <label>问题描述</label>
+          <textarea id="description" placeholder="请详细描述问题现象"></textarea>
+        </div>
 
-      <!-- 联系方式 -->
-      <div class="form-group">
-        <label>联系方式<span class="required">*</span></label>
-        <input id="contact" type="text" placeholder="姓名 / 电话 / 微信" />
-      </div>
+        <div class="row">
+          <div class="form-group">
+            <label>联系方式 <span>*</span></label>
+            <input id="contact" type="text" placeholder="姓名 / 电话 / 微信" required />
+          </div>
 
-      <!-- 备注 -->
-      <div class="form-group">
-        <label>备注</label>
-        <input id="remark" type="text" placeholder="如：下午两点后方便" />
-      </div>
+          <div class="form-group">
+            <label>备注</label>
+            <input id="remark" type="text" placeholder="如：下午两点后方便" />
+          </div>
+        </div>
+
+        <div class="actions">
+          <button id="submitBtn" class="btn btn-primary" type="submit">
+            提交工单
+          </button>
+
+          <button type="button" class="btn btn-secondary" onclick="document.getElementById('repairForm').reset()">
+            清空重填
+          </button>
+        </div>
+
+      </form>
     </div>
 
-   <div class="actions">
-  <button type="submit" class="btn btn-primary" id="submitBtn">
-    提交工单
-  </button>
-  <button type="button" class="btn btn-secondary" onclick="resetForm()">
-    清空重填
-  </button>
-</div>
-
-
-    <footer>© IT 运维系统 · 内部使用</footer>
+    <div class="footer">
+      © IT 运维系统 · 内部使用
+    </div>
   </div>
 
+  <!-- 只负责加载 JS，不写任何逻辑 -->
   <script src="./repair.js"></script>
 </body>
 </html>
