--- a/repair.html
+++ b/repair.html
@@ -8,201 +8,190 @@
   <style>
     body {
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: linear-gradient(180deg, #eef3fb, #ffffff);
-      color: #333;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+      background: linear-gradient(180deg, #eef3ff, #f7f9fc);
+      color: #1f2937;
     }
 
-    .page {
+    .container {
       max-width: 900px;
       margin: 40px auto;
-      padding: 0 16px;
-    }
-
-    .header {
-      margin-bottom: 20px;
-    }
-
-    .header h1 {
-      margin: 0;
-      font-size: 26px;
-    }
-
-    .header p {
-      margin: 6px 0 0;
-      color: #666;
-    }
-
-    .card {
+      padding: 30px;
       background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-      padding: 24px;
+      border-radius: 14px;
+      box-shadow: 0 20px 40px rgba(0,0,0,.08);
     }
 
-    .row {
+    h1 {
+      margin: 0;
+      font-size: 28px;
+    }
+
+    .sub {
+      margin-top: 6px;
+      color: #64748b;
+      font-size: 14px;
+    }
+
+    .warn {
+      margin: 20px 0;
+      padding: 12px 16px;
+      background: #fff1f2;
+      border: 1px solid #fecdd3;
+      color: #b91c1c;
+      border-radius: 8px;
+      font-size: 14px;
+    }
+
+    .grid {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 16px;
     }
 
-    .form-group {
-      margin-bottom: 16px;
+    .group {
+      display: flex;
+      flex-direction: column;
     }
 
     label {
-      display: block;
-      font-weight: 600;
+      font-size: 14px;
       margin-bottom: 6px;
     }
 
-    label span {
-      color: #d93025;
-    }
-
     input, select, textarea {
-      width: 100%;
-      box-sizing: border-box;
       padding: 10px 12px;
-      border-radius: 8px;
-      border: 1px solid #dcdcdc;
       font-size: 14px;
+      border-radius: 8px;
+      border: 1px solid #d1d5db;
     }
 
     textarea {
-      resize: vertical;
       min-height: 90px;
-    }
-
-    input:focus, select:focus, textarea:focus {
-      outline: none;
-      border-color: #4c7ef3;
+      resize: vertical;
     }
 
     .actions {
       display: flex;
-      gap: 12px;
-      margin-top: 20px;
+      gap: 16px;
+      margin-top: 24px;
     }
 
     .btn {
-      padding: 12px 22px;
-      border-radius: 10px;
+      padding: 12px 28px;
+      border-radius: 999px;
       font-size: 15px;
       cursor: pointer;
       border: none;
     }
 
     .btn-primary {
-      background: linear-gradient(135deg, #4c7ef3, #315be7);
+      background: linear-gradient(135deg, #4f46e5, #2563eb);
       color: #fff;
     }
 
     .btn-primary:disabled {
-      opacity: 0.6;
+      opacity: .6;
       cursor: not-allowed;
     }
 
     .btn-secondary {
-      background: #f3f4f6;
-      color: #333;
+      background: #f1f5f9;
+      color: #334155;
     }
 
-    .footer {
+    footer {
       text-align: center;
-      margin-top: 16px;
+      margin-top: 30px;
       font-size: 13px;
-      color: #999;
+      color: #94a3b8;
     }
 
-    .loading {
-      margin-left: 8px;
-      font-size: 13px;
+    @media (max-width: 768px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
 
 <body>
-  <div class="page">
-    <div class="header">
-      <h1>IT 运维支持系统</h1>
-      <p>内部报修入口 · 提交后自动生成工单</p>
+  <div class="container">
+    <h1>IT 运维支持系统</h1>
+    <div class="sub">内部报修入口 · 提交后自动生成工单</div>
+
+    <div class="warn">
+      ⚠️ 请先在 <b>repair.js</b> 中配置 <b>API_URL（Apps Script 的 Web App URL）</b>
     </div>
 
-    <div class="card">
-      <!-- 关键：必须是 form -->
-      <form id="repairForm" onsubmit="submitTicket(event)">
+    <!-- 关键：form -->
+    <form id="repairForm">
 
-        <div class="row">
-          <div class="form-group">
-            <label>报修部门 <span>*</span></label>
-            <select id="department" required>
-              <option value="">请选择部门</option>
-              <option>行政</option>
-              <option>总务</option>
-              <option>后勤</option>
-              <option>基建</option>
-              <option>教务处</option>
-              <option>销售部</option>
-              <option>IT 部</option>
-              <option>其他</option>
-            </select>
-          </div>
-
-          <div class="form-group">
-            <label>问题类型 <span>*</span></label>
-            <select id="category" required>
-              <option value="">请选择</option>
-              <option>系统</option>
-              <option>网络</option>
-              <option>硬件</option>
-              <option>账号权限</option>
-              <option>其他</option>
-            </select>
-          </div>
+      <div class="grid">
+        <div class="group">
+          <label>报修部门 *</label>
+          <select id="department" required>
+            <option value="">请选择部门</option>
+            <option>行政</option>
+            <option>总务</option>
+            <option>后勤</option>
+            <option>基建</option>
+            <option>教务处</option>
+            <option>销售部</option>
+            <option>IT 部</option>
+          </select>
         </div>
 
-        <div class="form-group">
-          <label>问题标题 <span>*</span></label>
-          <input id="title" type="text" placeholder="简要描述问题" required />
+        <div class="group">
+          <label>问题类型 *</label>
+          <select id="category" required>
+            <option value="">请选择</option>
+            <option>系统</option>
+            <option>网络</option>
+            <option>硬件</option>
+            <option>账号权限</option>
+            <option>其他</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="group">
+        <label>问题标题 *</label>
+        <input id="title" type="text" placeholder="简要描述问题" required />
+      </div>
+
+      <div class="group">
+        <label>问题描述 *</label>
+        <textarea id="description" placeholder="请详细描述问题现象" required></textarea>
+      </div>
+
+      <div class="grid">
+        <div class="group">
+          <label>联系方式 *</label>
+          <input id="contact" type="text" placeholder="姓名 / 电话 / 微信" required />
         </div>
 
-        <div class="form-group">
-          <label>问题描述</label>
-          <textarea id="description" placeholder="请详细描述问题现象"></textarea>
+        <div class="group">
+          <label>备注</label>
+          <input id="remark" type="text" placeholder="如：下午两点后方便" />
         </div>
+      </div>
 
-        <div class="row">
-          <div class="form-group">
-            <label>联系方式 <span>*</span></label>
-            <input id="contact" type="text" placeholder="姓名 / 电话 / 微信" required />
-          </div>
+      <div class="actions">
+        <button id="submitBtn" type="submit" class="btn btn-primary">
+          提交工单
+        </button>
+        <button type="button" class="btn btn-secondary" onclick="resetForm()">
+          清空重填
+        </button>
+      </div>
 
-          <div class="form-group">
-            <label>备注</label>
-            <input id="remark" type="text" placeholder="如：下午两点后方便" />
-          </div>
-        </div>
+    </form>
 
-        <div class="actions">
-          <button id="submitBtn" class="btn btn-primary" type="submit">
-            提交工单
-          </button>
-
-          <button type="button" class="btn btn-secondary" onclick="document.getElementById('repairForm').reset()">
-            清空重填
-          </button>
-        </div>
-
-      </form>
-    </div>
-
-    <div class="footer">
-      © IT 运维系统 · 内部使用
-    </div>
+    <footer>© IT 运维系统 · 内部使用</footer>
   </div>
 
-  <!-- 只负责加载 JS，不写任何逻辑 -->
-  <script src="./repair.js"></script>
+  <!-- 关键：JS -->
+  <script src="repair.js"></script>
 </body>
 </html>
