--- a/repair.html
+++ b/repair.html
@@ -7,49 +7,39 @@
 
   <style>
     body {
-      margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
-      background: linear-gradient(180deg, #eef3ff, #f7f9fc);
-      color: #1f2937;
+      background: #f2f5fb;
+      margin: 0;
+      padding: 40px;
     }
 
-    .container {
+    .card {
       max-width: 900px;
-      margin: 40px auto;
-      padding: 30px;
+      margin: auto;
       background: #fff;
-      border-radius: 14px;
-      box-shadow: 0 20px 40px rgba(0,0,0,.08);
+      border-radius: 12px;
+      padding: 32px 40px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
     }
 
     h1 {
-      margin: 0;
-      font-size: 28px;
+      margin-top: 0;
+      font-size: 26px;
     }
 
-    .sub {
-      margin-top: 6px;
-      color: #64748b;
-      font-size: 14px;
+    .desc {
+      color: #666;
+      margin-bottom: 24px;
     }
 
-    .warn {
-      margin: 20px 0;
-      padding: 12px 16px;
-      background: #fff1f2;
-      border: 1px solid #fecdd3;
-      color: #b91c1c;
-      border-radius: 8px;
-      font-size: 14px;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 16px;
+    .row {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 18px;
     }
 
     .group {
+      flex: 1;
       display: flex;
       flex-direction: column;
     }
@@ -59,139 +49,121 @@
       margin-bottom: 6px;
     }
 
-    input, select, textarea {
+    label span {
+      color: #e53935;
+    }
+
+    input,
+    select,
+    textarea {
       padding: 10px 12px;
+      border-radius: 6px;
+      border: 1px solid #dcdfe6;
       font-size: 14px;
-      border-radius: 8px;
-      border: 1px solid #d1d5db;
     }
 
     textarea {
-      min-height: 90px;
       resize: vertical;
+      min-height: 100px;
     }
 
     .actions {
+      margin-top: 30px;
       display: flex;
       gap: 16px;
-      margin-top: 24px;
     }
 
-    .btn {
+    button {
       padding: 12px 28px;
-      border-radius: 999px;
+      border-radius: 24px;
+      border: none;
       font-size: 15px;
       cursor: pointer;
-      border: none;
     }
 
-    .btn-primary {
-      background: linear-gradient(135deg, #4f46e5, #2563eb);
+    .primary {
+      background: linear-gradient(135deg, #4f7cff, #2f54eb);
       color: #fff;
     }
 
-    .btn-primary:disabled {
-      opacity: .6;
-      cursor: not-allowed;
-    }
-
-    .btn-secondary {
-      background: #f1f5f9;
-      color: #334155;
+    .secondary {
+      background: #f0f2f5;
+      color: #333;
     }
 
     footer {
       text-align: center;
       margin-top: 30px;
+      color: #999;
       font-size: 13px;
-      color: #94a3b8;
-    }
-
-    @media (max-width: 768px) {
-      .grid {
-        grid-template-columns: 1fr;
-      }
     }
   </style>
 </head>
 
 <body>
-  <div class="container">
+  <div class="card">
     <h1>IT 运维支持系统</h1>
-    <div class="sub">内部报修入口 · 提交后自动生成工单</div>
+    <div class="desc">内部报修入口 · 提交后自动生成工单</div>
 
-    <div class="warn">
-      ⚠️ 请先在 <b>repair.js</b> 中配置 <b>API_URL（Apps Script 的 Web App URL）</b>
+    <div class="row">
+      <div class="group">
+        <label>报修部门 <span>*</span></label>
+        <select id="department">
+          <option value="">请选择部门</option>
+          <option>行政</option>
+          <option>总务</option>
+          <option>后勤</option>
+          <option>基建</option>
+          <option>教务处</option>
+          <option>销售部</option>
+          <option>IT 部</option>
+        </select>
+      </div>
+
+      <div class="group">
+        <label>问题类型 <span>*</span></label>
+        <select id="type">
+          <option value="">请选择</option>
+          <option>系统</option>
+          <option>网络</option>
+          <option>硬件</option>
+          <option>权限</option>
+          <option>其他</option>
+        </select>
+      </div>
     </div>
 
-    <!-- 关键：form -->
-    <form id="repairForm">
+    <div class="group">
+      <label>问题标题 <span>*</span></label>
+      <input id="title" placeholder="简要描述问题" />
+    </div>
 
-      <div class="grid">
-        <div class="group">
-          <label>报修部门 *</label>
-          <select id="department" required>
-            <option value="">请选择部门</option>
-            <option>行政</option>
-            <option>总务</option>
-            <option>后勤</option>
-            <option>基建</option>
-            <option>教务处</option>
-            <option>销售部</option>
-            <option>IT 部</option>
-          </select>
-        </div>
+    <div class="group">
+      <label>问题描述 <span>*</span></label>
+      <textarea id="description" placeholder="请详细描述问题现象"></textarea>
+    </div>
 
-        <div class="group">
-          <label>问题类型 *</label>
-          <select id="category" required>
-            <option value="">请选择</option>
-            <option>系统</option>
-            <option>网络</option>
-            <option>硬件</option>
-            <option>账号权限</option>
-            <option>其他</option>
-          </select>
-        </div>
+    <div class="row">
+      <div class="group">
+        <label>联系方式 <span>*</span></label>
+        <input id="contact" placeholder="姓名 / 电话 / 微信" />
       </div>
 
       <div class="group">
-        <label>问题标题 *</label>
-        <input id="title" type="text" placeholder="简要描述问题" required />
+        <label>备注</label>
+        <input id="remark" placeholder="如：下午两点后方便" />
       </div>
+    </div>
 
-      <div class="group">
-        <label>问题描述 *</label>
-        <textarea id="description" placeholder="请详细描述问题现象" required></textarea>
-      </div>
-
-      <div class="grid">
-        <div class="group">
-          <label>联系方式 *</label>
-          <input id="contact" type="text" placeholder="姓名 / 电话 / 微信" required />
-        </div>
-
-        <div class="group">
-          <label>备注</label>
-          <input id="remark" type="text" placeholder="如：下午两点后方便" />
-        </div>
-      </div>
-
-      <div class="actions">
-        <button id="submitBtn" type="submit" class="btn btn-primary">
-          提交工单
-        </button>
-        <button type="button" class="btn btn-secondary" onclick="resetForm()">
-          清空重填
-        </button>
-      </div>
-
-    </form>
+    <div class="actions">
+      <button id="submitBtn" class="primary" onclick="submitTicket()">提交工单</button>
+      <button class="secondary" onclick="resetForm()">清空重填</button>
+    </div>
 
     <footer>© IT 运维系统 · 内部使用</footer>
   </div>
 
-  <!-- 关键：JS -->
-  <script src="repair.js"></script>
+  <!-- JS -->
+  <script src="./repair.js"></script>
 </body>
 </html>
