--- a/repair.html
+++ b/repair.html
@@ -140,7 +140,7 @@
 
     <div class="group">
       <label>问题描述 <span>*</span></label>
-      <textarea id="description" placeholder="请详细描述问题现象"></textarea>
+      <textarea id="description" placeholder="请详细描述问题现象和报修具体地点"></textarea>
     </div>
 
     <div class="row">
