--- a/repair.html
+++ b/repair.html
@@ -107,6 +107,15 @@
 
     <div class="row">
       <div class="group">
+        <label>楼栋 <span class="req">*</span></label>
+<select id="building" required>
+  <option value="">请选择楼栋</option>
+</select>
+<label>科室 <span class="req">*</span></label>
+<select id="department" required>
+  <option value="">请选择科室</option>
+</select>
+
         <label>报修部门 <span>*</span></label>
         <select id="department">
           <option value="">请选择部门</option>
