--- a/repair.html
+++ b/repair.html
@@ -1,220 +1,222 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <title>IT 运维报修</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8" />
+<title>IT 运维支持系统</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <style>
-    body {
-      font-family: "Microsoft YaHei", Arial, sans-serif;
-      background: #f5f7fa;
-      margin: 0;
-      padding: 0;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 30px auto;
-      background: #ffffff;
-      padding: 25px 30px;
-      border-radius: 6px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-    }
-
-    h1 {
-      margin-top: 0;
-      font-size: 22px;
-      border-left: 4px solid #3a7afe;
-      padding-left: 10px;
-    }
-
-    .desc {
-      font-size: 13px;
-      color: #666;
-      margin-bottom: 20px;
-    }
-
-    .row {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 15px;
-    }
-
-    .form-group {
-      flex: 1;
-    }
-
-    label {
-      display: block;
-      font-size: 14px;
-      margin-bottom: 6px;
-      font-weight: bold;
-    }
-
-    .req {
-      color: red;
-      margin-left: 3px;
-    }
-
-    select,
-    input,
-    textarea {
-      width: 100%;
-      box-sizing: border-box;
-      padding: 8px 10px;
-      font-size: 14px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    textarea {
-      resize: vertical;
-      min-height: 90px;
-    }
-
-    .hint {
-      font-size: 12px;
-      color: #888;
-      margin-top: 4px;
-    }
-
-    .actions {
-      margin-top: 25px;
-      display: flex;
-      gap: 15px;
-    }
-
-    button {
-      padding: 10px 22px;
-      font-size: 14px;
-      border-radius: 4px;
-      cursor: pointer;
-      border: none;
-    }
-
-    #btnSubmit {
-      background-color: #3a7afe;
-      color: #fff;
-    }
-
-    #btnSubmit:disabled {
-      background-color: #a0b8ff;
-      cursor: not-allowed;
-    }
-
-    .btn-reset {
-      background-color: #e0e0e0;
-    }
-
-    .footer {
-      margin-top: 25px;
-      font-size: 12px;
-      color: #888;
-      text-align: center;
-    }
-  </style>
+<style>
+body {
+  background: #f4f7fb;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+}
+.container {
+  max-width: 900px;
+  margin: 40px auto;
+  background: #fff;
+  border-radius: 12px;
+  padding: 30px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.08);
+}
+h1 {
+  margin: 0;
+}
+.sub {
+  color: #666;
+  margin-bottom: 20px;
+}
+.row {
+  display: flex;
+  gap: 20px;
+}
+.form-group {
+  margin-bottom: 16px;
+  flex: 1;
+}
+label {
+  font-weight: 600;
+  display: block;
+  margin-bottom: 6px;
+}
+input, select, textarea {
+  width: 100%;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+}
+textarea {
+  resize: vertical;
+}
+.actions {
+  margin-top: 20px;
+}
+button {
+  padding: 12px 28px;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+}
+.btn-primary {
+  background: #3f6cf4;
+  color: #fff;
+}
+.btn-secondary {
+  background: #eee;
+}
+.alert {
+  background: #fff4f4;
+  color: #b40000;
+  padding: 12px;
+  border-radius: 6px;
+  margin-bottom: 20px;
+}
+footer {
+  text-align: center;
+  color: #999;
+  margin-top: 30px;
+}
+</style>
 </head>
 
 <body>
 
-  <div class="container">
-    <h1>IT 运维报修</h1>
-    <div class="desc">
-      电话占线或不方便通话时，请通过本页面提交报修，工单将自动记录。
+<div class="container">
+  <h1>IT 运维支持系统</h1>
+  <div class="sub">内部报修入口 · 提交后自动生成工单</div>
+
+  <div id="alert" class="alert" style="display:none"></div>
+
+  <form id="repairForm">
+
+    <div class="row">
+      <div class="form-group">
+        <label>报修部门 *</label>
+        <select id="department" required>
+          <option value="">加载中…</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label>问题类型 *</label>
+        <select id="type" required>
+          <option value="">请选择</option>
+          <option>系统</option>
+          <option>网络</option>
+          <option>硬件</option>
+          <option>账号权限</option>
+          <option>其他</option>
+        </select>
+      </div>
     </div>
 
-    <form id="repairForm">
-
-      <!-- 楼栋 / 科室 -->
-      <div class="row">
-        <div class="form-group">
-          <label>楼栋<span class="req">*</span></label>
-          <select id="building">
-            <option value="">请选择楼栋</option>
-          </select>
-          <div class="hint">请选择所在大楼</div>
-        </div>
-
-        <div class="form-group">
-          <label>科室<span class="req">*</span></label>
-          <select id="department">
-            <option value="">请选择科室</option>
-          </select>
-          <div class="hint">根据楼栋自动加载</div>
-        </div>
-      </div>
-
-      <!-- 问题类型 -->
-      <div class="row">
-        <div class="form-group">
-          <label>问题类型<span class="req">*</span></label>
-          <select id="category">
-            <option value="">请选择</option>
-            <option value="系统">系统</option>
-            <option value="网络">网络</option>
-            <option value="电脑/终端">电脑/终端</option>
-            <option value="打印/外设">打印/外设</option>
-            <option value="账号权限">账号权限</option>
-            <option value="其他">其他</option>
-          </select>
-        </div>
-      </div>
-
-      <!-- 标题 -->
-      <div class="row">
-        <div class="form-group">
-          <label>问题标题<span class="req">*</span></label>
-          <input id="title" type="text" placeholder="例如：打印机无法打印" />
-          <div class="hint">4~20 个字</div>
-        </div>
-      </div>
-
-      <!-- 描述 -->
-      <div class="row">
-        <div class="form-group">
-          <label>问题描述<span class="req">*</span></label>
-          <textarea id="description" placeholder="请描述问题现象、出现时间等"></textarea>
-        </div>
-      </div>
-
-      <!-- 联系方式 + 位置 -->
-      <div class="row">
-        <div class="form-group">
-          <label>联系方式<span class="req">*</span></label>
-          <input id="contact" type="text" placeholder="内线 / 手机 / 姓名" />
-        </div>
-
-        <div class="form-group">
-          <label>具体位置<span class="req">*</span></label>
-          <input id="position" type="text" placeholder="如：2楼护士站" />
-          <div class="hint">4~20 个字</div>
-        </div>
-      </div>
-
-      <!-- 备注 -->
-      <div class="row">
-        <div class="form-group">
-          <label>备注</label>
-          <input id="remark" type="text" placeholder="如：下午两点后方便" />
-        </div>
-      </div>
-
-      <!-- 按钮 -->
-      <div class="actions">
-        <button id="btnSubmit" type="submit">提交工单</button>
-        <button type="reset" class="btn-reset">清空重填</button>
-      </div>
-
-    </form>
-
-    <div class="footer">
-      内部使用 · IT 运维支持系统
+    <div class="form-group">
+      <label>问题标题 *</label>
+      <input id="title" required placeholder="简要描述问题" />
     </div>
-  </div>
 
-  <!-- 只加载 repair.js -->
-  <script src="./repair.js"></script>
+    <div class="form-group">
+      <label>问题描述 *</label>
+      <textarea id="description" rows="4" required placeholder="请详细描述问题现象"></textarea>
+    </div>
+
+    <div class="row">
+      <div class="form-group">
+        <label>联系方式 *</label>
+        <input id="contact" required placeholder="姓名 / 电话 / 微信" />
+      </div>
+
+      <div class="form-group">
+        <label>具体位置 *</label>
+        <input id="location" required placeholder="如：3楼护士站" />
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label>备注</label>
+      <input id="remark" placeholder="如：下午两点后方便" />
+    </div>
+
+    <div class="actions">
+      <button id="submitBtn" class="btn-primary" type="submit">提交工单</button>
+      <button type="reset" class="btn-secondary">清空重填</button>
+    </div>
+  </form>
+
+  <footer>© IT 运维系统 · 内部使用</footer>
+</div>
+
+<script>
+const API_URL = "https://script.google.com/macros/s/AKfycbxImRa0mXhL31GPzoAYkqyx_ri_g_9OfX9glS450DNdMHn_uOJ6Eqw6g4A3MseKPqWYaQ/exec";
+
+const alertBox = document.getElementById("alert");
+const submitBtn = document.getElementById("submitBtn");
+
+function showAlert(msg) {
+  alertBox.innerText = msg;
+  alertBox.style.display = "block";
+}
+
+async function loadDepartments() {
+  try {
+    const res = await fetch(API_URL + "?action=departments");
+    const data = await res.json();
+    const sel = document.getElementById("department");
+    sel.innerHTML = '<option value="">请选择部门</option>';
+    data.forEach(d => {
+      const opt = document.createElement("option");
+      opt.value = d;
+      opt.textContent = d;
+      sel.appendChild(opt);
+    });
+  } catch {
+    showAlert("无法加载部门列表，请联系 IT");
+  }
+}
+
+document.getElementById("repairForm").addEventListener("submit", async e => {
+  e.preventDefault();
+
+  const location = document.getElementById("location").value.trim();
+  if (location.length < 4 || location.length > 20) {
+    showAlert("具体位置需 4–20 个字");
+    return;
+  }
+
+  submitBtn.disabled = true;
+  submitBtn.innerText = "提交中…";
+
+  const payload = {
+    department: department.value,
+    type: type.value,
+    title: title.value,
+    description: description.value,
+    contact: contact.value,
+    location,
+    remark: remark.value
+  };
+
+  try {
+    const res = await fetch(API_URL, {
+      method: "POST",
+      body: JSON.stringify(payload)
+    });
+    const r = await res.json();
+    if (r.ok) {
+      alert("提交成功 ✅ 工单已生成");
+      e.target.reset();
+    } else {
+      throw new Error();
+    }
+  } catch {
+    showAlert("提交失败（网络或权限问题）");
+  } finally {
+    submitBtn.disabled = false;
+    submitBtn.innerText = "提交工单";
+  }
+});
+
+loadDepartments();
+</script>
 
 </body>
 </html>
