--- a/repair.html
+++ b/repair.html
@@ -91,6 +91,37 @@ footer {
     <div class="row">
       <div class="form-group">
         <label>报修部门 *</label>
+        <script>
+const API_URL = 'https://script.google.com/macros/s/你的部署ID/exec';
+
+document.addEventListener('DOMContentLoaded', () => {
+  const select = document.getElementById('department');
+
+  fetch(API_URL + '?action=getDepartments')
+    .then(res => res.json())
+    .then(json => {
+      if (!json.ok || !Array.isArray(json.data)) {
+        throw new Error('API 返回异常');
+      }
+
+      // 清空“加载中…”
+      select.innerHTML = '<option value="">请选择科室</option>';
+
+      json.data.forEach(name => {
+        const opt = document.createElement('option');
+        opt.value = name;
+        opt.textContent = name;
+        select.appendChild(opt);
+      });
+    })
+    .catch(err => {
+      console.error(err);
+      select.innerHTML = '<option value="">无法加载科室</option>';
+      alert('无法加载部门列表，请联系 IT');
+    });
+});
+</script>
+
         <select id="department" required>
           <option value="">加载中…</option>
         </select>
