--- a/repair.html
+++ b/repair.html
@@ -92,7 +92,7 @@ footer {
       <div class="form-group">
         <label>报修部门 *</label>
         <script>
-const API_URL = 'https://script.google.com/macros/s/你的部署ID/exec';
+const API_URL = 'https://script.google.com/macros/s/AKfycbxo8959wtz4dU-WsA2x2vr8WTwTbp77ryM_cqXdihT263PP3qpREjcaROOtbH7wbMOHbQ/exec';
 
 document.addEventListener('DOMContentLoaded', () => {
   const select = document.getElementById('department');
