--- a/repair.html
+++ b/repair.html
@@ -170,6 +170,6 @@
   </div>
 
   <!-- JS：只加载 repair.js，不写内联逻辑 -->
-  <script src="./repair.js"></script>
+  <script src="./repair.js?v=20251222"></script>
 </body>
 </html>
